--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "agenthub": "bin/agenthub"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -33,5 +34,8 @@
     "agentx": "^1.8.4",
     "commandx": "^1.3.3",
     "nounou": "^1.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.2"
   }
 }
