--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@alicloud/agenthub",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "整合 agentx 和 commandx 便利工具",
-  "main": "agenthub.js",
+  "main": "lib/agenthub.js",
   "bin": {
     "agenthub": "bin/agenthub"
   },
