--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alicloud/agenthub",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "整合 agentx 和 commandx 便利工具",
   "main": "lib/agenthub.js",
   "bin": {
@@ -32,7 +32,7 @@
     "lib"
   ],
   "dependencies": {
-    "agentx": "^1.8.4",
+    "agentx": "tracing",
     "commandx": "^1.3.3",
     "nounou": "^1.2.1"
   },
